--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
 extends layout
 
 block content
-  h1 Akshay Kumar Gupta
-  p Welcome to #{Akshay} I am boring.
+  h1 Akshay kumar gupta
+  p  Welcome to #{title} I am very boring
+  button(type="button", class="btn btn-primary") Press Me for the contents
