--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,14 @@ extends layout
 block content
   h1 Akshay kumar gupta
   p  Welcome to #{title} I am very boring
-  button(type="button", class="btn btn-primary") Press Me for the contents
+  button.btn.btn-success(type="button", onclick="gofaster()") Press Me for details
+  div#faster Increase the speed 
+
+  script.
+    var mph = 20;
+    var change = 1;
+    function gofaster() {
+      mph = change + mph;
+      change = change + 1;
+      document.getElementById("faster").innerText = 'MPH ' + mph + ' with change ' + change;
+    }
