Added link of bag in index

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ block content
   p  Welcome to #{title} I am very boring
   button.btn.btn-success(type="button", onclick="gofaster()") Press Me for details
   div#faster Increase the speed 
+  a(href="/bag") View Bag page
 
   script.
     var mph = 20;
